style.css
* {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}
/*
  * website animated background section
*/
section {
  width: 100%;
  height: 100vh;
  background-image: linear-gradient(90deg, #ff3cac, #784ba0, #d9afd9, #2b86c5);
  background-size: 400% 400%;
  position: relative;
  animation: color-change 10s ease-in-out infinite;
}

@keyframes color-change {
  0% {
    background-position: 0 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0 50%;
  }
}

header {
  width: auto;
  height: 40px;
}
nav {
  border: 1px solid aqua;
  border-top: none;
  border-bottom: none;
  padding: 7px;
  background-color: rgba(13, 57, 68, 0);
  width: 450px;
  height: 20px;
  position: relative;
  left: 40px;
}
.selected {
  background-color: rgba(247, 244, 120, 0.692);
  box-shadow: 0 0 10px 0 black;
  border-radius: 10px;
  border: 2px solid rgb(0, 221, 255);
  border-top: none;
  border-right: none;
  border-left: none;
}
.navbar a {
  font-weight: bold;
  text-decoration: none;
  padding: 14px;
  color: rgb(255, 255, 255);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15px;
  text-shadow: 0 0 10px rgb(0, 0, 0);
}
.navbar a:hover {
  border: 1px solid aqua;
  border-top: none;
  border-right: none;
  border-left: none;
}

/* 
*Sign-in and Sign-up buttons style 
*/
.signbtns {
  position: relative;
  right: 40px;
  text-align: right;
}
.signbtns a {
  font-size: 14px;
  background-color: rgba(45, 54, 58, 0.487);
  text-decoration: none;
  padding: 14px;
  color: rgb(243, 243, 243);
}
.signbtns a:hover {
  background-color: none;
  border: 1px solid aqua;
  border-top: none;
  border-right: none;
  border-left: none;
  text-shadow: 0 0 14px rgb(84, 219, 243);
}
.signbtns p {
  position: relative;
  right: 180px;
  top: 20px;
  color: rgba(206, 206, 206, 0.822);
  text-shadow: 0 0 14px rgb(84, 219, 243);
  font-family: Arial, Helvetica, sans-serif;
}

/* Home page main section positioning */
main {
  align-items: center;
  display: flex;
  width: auto;
  height: 600px;
  margin-top: 100px;
  margin-bottom: auto;
}
.box1 {
  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
  text-align: center;
  padding: 20px;
  position: relative;
  top: 30px;
  left: 90px;
  width: 500px;
  height: 200px;
  animation: box1anim 700ms ease-in;
}
/* 
* animation for homepage 
*/
@keyframes box1anim {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0);
  }
}
@keyframes box2anim {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0);
  }
}
/*
*Home page text area
*/
.box1 h1 {
  color: aliceblue;
  text-shadow: 0 0 14px rgb(84, 219, 243);
  font-size: 30px;
  font-family: Arial, Helvetica, sans-serif;
}
.questions ul {
  padding: 10px;
  font-size: 16px;
  color: rgba(255, 255, 255, 0.79);
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
}
.box2 {
  position: relative;
  border-radius: 60px;
  top: 30px;
  left: 200px;
  bottom: 20px;
  width: 350px;
  height: 300px;
  animation: box2anim 700ms ease-in;
}
/* Home page img styling*/
img {
  border-radius: 80px;
  background-position: center;
  background-size: cover;
  width: 350px;
  height: 300px;
}
footer {
  text-align: center;
  width: auto;
  height: 60px;
  color: white;
  font-family: "Courier New", Courier, monospace;
}
/*
*sign in form styling
*/

.formContainer {
  margin: auto;
  padding-top: 50px;
  border-radius: 20px;
  width: 500px;
  height: 510px;
}

.forms {
  text-align: center;
  border-radius: 20px;
  background-color: #ffffff15;
  box-shadow: 0 0 10px 0 rgb(84, 219, 243);
  height: 400px;
}
.forms h1 {
  padding: 20px;
  margin-bottom: 10px;
  color: white;
  text-shadow: 0 0 14px rgb(222, 124, 255);
  font-size: 30px;
}

ul.signInform {
  list-style-type: none;
  color: rgb(255, 255, 255);
  text-shadow: 0 0 14px rgb(255, 54, 54);
}
ul.signInform li {
  margin-top: 10px;
  margin-bottom: 50px;
  width: auto;
}
ul.signInform li input {
  background-color: white;
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 170px;
  text-align: center;
  transition: width 1s;
}
ul.signInform button {
  border-radius: 10px;
  color: #ffffff;
  background-color: #352961;
  width: 60px;
  height: 30px;
}
ul.signInform button:hover {
  background-color: rgb(29, 145, 165);
}

ul.signInform li input:hover {
  width: 250px;
  border-color: rgb(162, 0, 255);
}
/*
*Sign up form styling
*/

ul.signUpform {
  padding: 10px;
  text-align: left;
  list-style-type: none;
  color: rgb(255, 255, 255);
  text-shadow: 0 0 14px rgb(255, 54, 54);
}
ul.signUpform li {
  margin-top: 10px;
  margin-bottom: 10px;
  width: auto;
}
ul.signUpform li input {
  background-color: white;
  border-radius: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 170px;
  text-align: center;
  transition: width 1s;
}
ul.signUpform button {
  border-radius: 10px;
  color: #ffffff;
  background-color: #352961;
  width: 60px;
  height: 30px;
}
ul.signUpform button:hover {
  background-color: rgb(29, 145, 165);
}

ul.signUpform li input:hover {
  width: 250px;
  border-color: rgb(162, 0, 255);
}

/*
* How to play page design
*/

.grid-container > div {
  background: rgb(99, 99, 99);
  padding: 1rem;
}
.grid-container > div:nth-child(odd) {
  background: rgb(122, 122, 122);
}
.grid-container {
  grid-auto-rows: minmax(100px, auto);
  display: grid;
  grid-template-columns: 60% 30%;
  grid-template-rows: 300px;
  grid-gap: 1em;
  padding: 10rem;
  justify-items: stretch;
}
.grid-item-1 {
  grid-column: 1/2;
  grid-row: 1/2;
  box-shadow: 0 0 10px 0 black;
}
.grid-item-2 {
  box-shadow: 0 0 10px 0 black;
}

